--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>TC-LOGO</title>
+  <title>Projet Haskell/ELM</title>
   <link rel="stylesheet" href="style.css">
   <script src="Main.js"></script>
 </head>
